# image-meta-dataset

./: README.md  main.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish
